<resources>
    <string name="app_name">Maxcrop: Employee</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_main">Main menu</string>
    <string name="menu_filter_data">Generate reports</string>
    <string name="menu_account">Account settings</string>
    <string name="menu_server">Server settings</string>
    <string name="menu_issues">Show reported issues</string>
    <string name="label_version">version:</string>
    <string name="already_have_acc">I already have account</string>
    <string name="want_to_register">I want to register new account</string>
    <string name="welcome_info">If You already have account You can proceed to login. Otherwise You have to register account first (providing Your Employer Code will be required).</string>
    <string name="logged_as">Logged as:</string>
    <string name="hint_login">Enter your login</string>
    <string name="hint_password">Enter password</string>
    <string name="label_save">Save</string>
    <string name="label_cancel">Cancel</string>
    <string name="login_or_password_too_short">Login or password too short!</string>
    <string name="user_name">Name</string>
    <string name="user_last_name">Last name</string>
    <string name="user_birth_date">Birthdate</string>
    <string name="user_password">Password</string>
    <string name="user_repeat_password">Repeat password</string>
    <string name="hint_repeat_password">Repeat password</string>
    <string name="user_employer_code">Employer code</string>
    <string name="label_verify">Verify</string>
    <string name="warning_password_not_match">Password and it\'s confirmation do not match.</string>
    <string name="warning_password_too_short">Password too short, use min. 8 characters.</string>
    <string name="warning_wrong_birth_date">You must be full of age to register.</string>
    <string name="data_filter_disclaimer">Selected up to 7 days for which You want to request report for.</string>
    <string name="data_filter_date_from">Date from:</string>
    <string name="data_filter_date_to">Date to:</string>
    <string name="label_download_report">Download report</string>
    <string name="label_ok">Ok</string>
    <string name="date_from_cant_be_older">\'Date to\' can\'t be older than \'Date from\'.</string>
    <string name="too_long_time_span">Selected date range is too large.</string>
    <string name="label_serverAddress">Server address</string>
    <string name="label_setting_database">Database</string>
    <string name="label_settings_webservice">REST API</string>
    <string name="label_settings_server_protocol">Protocol</string>
    <string name="report_action_timework">Timework</string>
    <string name="report_action_piecework">Piecework</string>
    <string name="report_action_harvest">Piecework</string>
    <string name="report_action_sweden_ob">OB</string>
    <string name="report_action_holiday">Holiday</string>
    <string name="report_action_surcharge">Surcharge</string>
    <string name="report_action_break">Break</string>
    <string name="report_action_difference">Difference</string>
    <string name="report_action_pay_out">Payout</string>
    <string name="report_action_payment">Payment</string>
    <string name="report_action_acc_balance">Account balance</string>
    <string name="want_to_change_settings">Change server settings</string>
    <string name="column_label_date">Date</string>
    <string name="column_label_area">Area</string>
    <string name="column_label_product_class">Product class</string>
    <string name="column_label_work_type">Work type</string>
    <string name="column_label_payment_for">Evidence</string>
    <string name="column_label_day_start">Time from</string>
    <string name="column_label_day_stop">Time to</string>
    <string name="column_label_wage">Wage</string>
    <string name="column_label_time">Time</string>
    <string name="column_label_amount">Quantity</string>
    <string name="column_label_weight">Weight</string>
    <string name="column_label_total">Total</string>
    <string name="label_quantity">quantity</string>
    <string name="label_weight">weight</string>
    <string name="column_label_calculation_type">Calculation type</string>
    <string name="column_calculation_for_quantity">by quantity</string>
    <string name="column_calculation_for_weight">by weight</string>
    <string name="label_send_report">Send</string>
    <string name="issue_info">You can report a data inconsistency in this field to your employer.</string>
    <string name="issue_description">Details:</string>
    <string name="error_problem_registering_issue">"Could not register issue to server. "</string>
    <string name="label_issue_sent">Sent</string>
    <string name="label_issue_unsent">Unsent</string>
    <string name="error_registration_forbidden">Account registration has been blocked by Your employer.</string>
    <string name="error_requested_date_not_available">Requested date is not yet available. Try again tomorrow.</string>
    <string name="error_account_already_registered">Account for those credentials already exists. Try to log in using Your login and password, or contact your employer to reset Your account.</string>
    <string name="error_unathorized">Failed to authorize Your request. Check if You provided proper login and password.</string>
    <string name="error_response_malformed">Unexpected response from the server. Contact Your employer.</string>
    <string name="error_response_unknown">Unepected response status:</string>
    <string name="error_illegal_access_exception">Failed to parse server response. Contact Your employer.</string>
    <string name="login_in_wrong_format">Login must contain \'.\' and \'#\' characters.</string>
    <string name="error_connection_problem">Could not connect to the server. Check your internet connection.</string>
    <string name="label_retore_defaults">Restore defaults</string>
    <string name="price_group_calc_type_0">[R0] for each kg</string>
    <string name="price_group_calc_type_1">[R1] for each kg above average</string>
    <string name="price_group_calc_type_2">[R2] for each kg above a minimum</string>
    <string name="price_group_calc_type_3">[R3] for each kg if you exceed the minimum</string>
    <string name="price_group_calc_type_4">[R4] for each kg if it exceeds the average</string>
    <string name="price_group_calc_type_5">[R5] for each piece</string>
    <string name="price_group_calc_type_6">[R6] for each piece above average</string>
    <string name="price_group_calc_type_7">[R7] for each piece above the minimum</string>
    <string name="price_group_calc_type_8">[R8] for each piece if it exceeds the minimum</string>
    <string name="price_group_calc_type_9">[R9] for each piece if it exceeds the average</string>
    <string name="column_label_price_group">Price group</string>
    <string name="column_label_price_group_min">Minimum</string>
    <string name="column_label_price_group_avg">Average</string>
    <string name="label_pick_year">Select year</string>
    <string name="label_issue_apply_to">Applies to record:</string>
    <string name="label_field">Field:</string>
    <string name="label_field_value">Field value:</string>
    <string name="issue_reg_date">Filling date</string>
    <string name="label_latest_report_requests">Latest requests:</string>
    <string name="issue_missing_data">No data was found for this day. Click on the date field below to report a bug.</string>
    <string name="error_issue_registration_blocked">Issue registration has been blocked.</string>
    <string name="error_limit_exceeded_exception">Daily limit exceeded.</string>
</resources>
