<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_main" />
        <item
            android:id="@+id/nav_filter_data"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_filter_data" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_account" />
        <item
            android:id="@+id/nav_server"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_server" />
    </group>

    <item android:title="Problems?">
        <menu>
            <item
                android:id="@+id/nav_issue"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_issues" />

        </menu>
    </item>

</menu>
