<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_margin="8dp"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/welcome_info"
        android:layout_marginTop="10dp">

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <Button
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="12dp"
            android:text="@string/already_have_acc"
            android:id="@+id/do_login_btn"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="12dp"
            android:text="@string/want_to_register"
            android:id="@+id/do_register_btn"
            />

        <Button
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="12dp"
            android:textSize="15sp"
            android:visibility="gone"
            android:text="@string/want_to_change_settings"
            android:id="@+id/do_serversettings_btn"
            />
    </LinearLayout>

</LinearLayout>