<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="5dp">
        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="156dp"
            android:layout_gravity="end|center_vertical"
            android:background="#fff"
            app:srcCompat="@drawable/logo_340" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textSize="22sp"
                android:textColor="@color/colorPrimaryDark"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:id="@+id/register_name"
                android:hint="Jan"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/user_last_name"
                android:textSize="22sp"
                android:textColor="@color/colorPrimaryDark"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:id="@+id/register_last_name"
                android:hint="Kowalski"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/user_birth_date"
                android:textSize="22sp"
                android:layout_gravity="center_vertical"
                android:textColor="@color/colorPrimaryDark"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="____-__-__"
                android:id="@+id/register_birth_date"
                android:layout_gravity="center_vertical"
                android:textSize="22sp"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/user_password"
                android:textSize="22sp"
                android:textColor="@color/colorPrimaryDark"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:id="@+id/register_password"
                android:inputType="textPassword"
                android:hint="@string/hint_password"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/user_repeat_password"
                android:textSize="22sp"
                android:textColor="@color/colorPrimaryDark"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:id="@+id/register_repeat_password"
                android:inputType="textPassword"
                android:hint="@string/hint_repeat_password"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/user_employer_code"
                android:textSize="22sp"
                android:layout_gravity="center_vertical"
                android:textColor="@color/colorPrimaryDark"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:id="@+id/register_employer_code"
                android:inputType="number"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:text="@string/label_cancel"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:id="@+id/btn_cancel_register"
                android:layout_weight="1"
                android:layout_margin="2dp"
                />

            <Button
                android:text="@string/label_verify"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:id="@+id/btn_verify_register"
                android:layout_weight="1"
                android:layout_margin="2dp"
                />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>