<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/serverAddrTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="130dp"
                android:text="@string/label_serverAddress" />

            <EditText
                android:id="@+id/serverAddressText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/label_serverAddress" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/serverDBTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="130dp"
                android:text="@string/label_setting_database" />

            <EditText
                android:id="@+id/serverDatabaseText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/label_setting_database" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/serverWSTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="130dp"
                android:text="@string/label_settings_webservice" />

            <EditText
                android:id="@+id/serverAPIText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/label_settings_webservice" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/serverProtocolTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="130dp"
                android:text="@string/label_settings_server_protocol" />

            <EditText
                android:id="@+id/serverProtocolText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/label_settings_server_protocol" />
        </LinearLayout>

        <Button
            android:text="@string/label_save"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:id="@+id/btn_save_server_settings"
            android:layout_margin="14dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp">
            <Button
                android:text="@string/label_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_cancel_settings"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="0dp"/>

            <Button
                android:text="@string/label_retore_defaults"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_restore_settings"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_marginTop="0dp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>